<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/autoCamarero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_camarero"
            android:inputType="text"
            android:completionThreshold="3"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_total"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:layout_marginTop="10dp"/>

        <CheckBox
            android:id="@+id/checkPropina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incluir_propina"/>

        <TextView
            android:id="@+id/textPorcentaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Propina: 10%"
            android:layout_marginTop="10dp"/>

        <SeekBar
            android:id="@+id/seekPropina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="30"
            android:progress="10"/>

        <RadioGroup
            android:id="@+id/groupPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/radioEfectivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/efectivo"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioTarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tarjeta"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/califica_servicio"/>

        <RatingBar
            android:id="@+id/ratingServicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0" />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcular_total"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>